# iris-forcasting

./: README.md  pyproject.toml
notebooks/: 01-exploration.ipynb
src/: main.py
src/iris_forecasting/: data_loader.py  features.py  model.py  predict.py  train.py  utils.py
tests/: test_data.py  test_predict.py  test_train.py
